fix horizontal alignment

--- a/loading wheel/svg_wheel.css
+++ b/loading wheel/svg_wheel.css
@@ -28,5 +28,6 @@ circle {
     position: absolute;
     text-align: center;
     top: calc(187px - 2rem);
+    left: 0;
     font-size: 4rem;
 }
